# RationaLP

./: .gitignore  CMakeLists.txt  LinearProgram.h  Pivot.h  README.md  Tableau.h  generate_klee_minty.py  generate_random.py  generate_vertex_cover.py  main.cpp  test.py  test_generator.py
inputs/: current.txt  small-2phase.txt  test_busdriver.txt  test_feasible_10x20.txt  test_feasible_20x40.txt  test_feasible_40x80.txt  test_feasible_5x10.txt  test_infeasible_10x20.txt  test_infeasible_20x40.txt  test_infeasible_40x80.txt  test_infeasible_5x10.txt  test_klee_minty_16.txt  test_klee_minty_2.txt  test_klee_minty_4.txt  test_klee_minty_8.txt  test_lumberjack.txt  test_unbounded_10x20.txt  test_unbounded_20x40.txt  test_unbounded_40x80.txt  test_unbounded_5x10.txt  test_vertex_cover_20x20.txt  test_vertex_cover_20x40.txt  test_vertex_cover_40x20.txt  test_vertex_cover_40x40.txt
